--- a/root/index.html
+++ b/root/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>index페이지</title>
+  <!-- 외부 스타일시트 링크 -->
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   index 페이지
-  <a href="/contact.html">contact페이지 이동</a>
+  <a href="/root/contact.html">contact페이지 이동</a>
+  <br>
 
 </body>
 </html>
