--- a/root-2x/header.html
+++ b/root-2x/header.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>contact페이지</title>
-  <!-- 외부 스타일 시트 -->
-  <link href="css/style.css" rel="stylesheet">
+  <title>header</title>
 </head>
 <body>
-  contact 페이지
+  <h1>헤더 입니다</h1>
 </body>
 </html>
