--- a/root/about/index.html
+++ b/root/about/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>contact페이지</title>
-  <!-- 외부 스타일 시트 -->
-  <link href="css/style.css" rel="stylesheet">
+  <title>Document</title>
 </head>
 <body>
-  contact 페이지
+  about 페이지
+  <a href="../contact/index.html"> contact페이지로 이동</a>
 </body>
 </html>
